--- a/resources/sass/_profile.sass
+++ b/resources/sass/_profile.sass
@@ -10,8 +10,8 @@
             .first-block-container
                 display: grid
                 width: 100%
-                grid-template-columns: 40rem 1fr
                 grid-template-rows: auto
+                grid-template-columns: 40rem 1fr
                 grid-template-areas: "image label"
 
                 .container-inputs
@@ -65,7 +65,6 @@
                             transition: $standar
 
                     .user, .password
-
                         margin-top: 16rem
 
                     .message
@@ -216,6 +215,48 @@
 @media screen and (max-width: 599px) and (min-width: 320px)
     .container-forms-profile
         margin-left: 5rem
+        margin-right: 3rem
+
+        .first-block-container
+            width: 90%
+            grid-template-columns: 10rem 20rem
+
+            .container-inputs
+                width: 30rem
+
+                .input-container
+                    width: 25rem
+
+                    input, select
+                        width: 20rem
+                        padding: 0
+                        margin-right: 3rem
+
+            .button-container
+                margin-top: 3rem
+
+                .user, .password
+                    translate: 0 5rem
+
 
     .danger-header
             margin-left: 5rem
+
+    .modal-container
+        width: 35rem
+
+        .modal-content
+
+            h2
+                font-size: $description-card - .2rem
+
+            p
+                width: 33rem
+                font-size: $description-card - .3rem
+
+            .form-group
+
+            .modal-actions
+
+                .button
+                    width: 15rem
