fix(sidebar): corrrecion bug in the sidebar for users no admin

--- a/resources/sass/_sidebar.sass
+++ b/resources/sass/_sidebar.sass
@@ -88,6 +88,16 @@
                             transition: $standar
                             transition-delay: calc( .1s * var(--i))
 
+                    .elements-sidebar-user
+                        width: 30rem
+                        display: flex
+                        margin-bottom: 20rem
+                        justify-content: space-around
+
+                        span
+                            color: negro
+
+
             .settings-dropdown
                 width: 35rem
                 height: 15rem
@@ -125,8 +135,8 @@
                             background: $background
 
                     .img-logout
-                        height: 4rem
                         width: 4rem
+                        height: 4rem
 
                     button
                         scale: .9
