--- a/resources/sass/_forms.sass
+++ b/resources/sass/_forms.sass
@@ -40,13 +40,13 @@
 
 .container-forms
     width: 70%
-    height: 62rem
+    height: fit-content
     display: flex
     box-shadow: $shadow
     flex-direction: column
     border-radius: $br-rad
     justify-content: space-around
-    transform: translate(20%, 13%)
+    transform: translate(20%, 4%)
 
     .title-forms
         width: 100%
@@ -63,12 +63,13 @@
 
 
     .form-container
-        height: 50rem
+        height: fit-content
 
         .form-space
             width: 100%
-            height: 50rem
+            height: 60rem
             display: flex
+            padding: 2rem 0
             flex-direction: row
             align-items: center
             flex-direction: column
@@ -90,6 +91,8 @@
 
                     @include inputs
 
+                    img
+                        display: none
 
                     .file-input
                         background: transparent
