feat(student.index): add new style and structure for the units cards

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -28,6 +28,9 @@
 // Mixins
 @import '_mixins'
 
+// Temas de estudio/unidades
+@import '_theme'
+
 // Configuración global del font-size
 html
     font-size: 62.5%
