fix(admin.index, admin.form): add new field for add image for the units

--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -219,6 +219,12 @@
                                 justify-content: space-evenly
                                 align-items: center
 
+
+                        .table-image
+                                margin-left: 15rem
+                                width: 4rem
+                                height: 4rem
+
                         &.lession
                             width: 20rem
 
