feat(student.unit): add responsive for mobile device

--- a/resources/sass/_theme.sass
+++ b/resources/sass/_theme.sass
@@ -105,3 +105,25 @@
             &:active
                 scale: .9
                 transition: $standar
+
+@media screen and ( max-width: 599px) and (min-width: 320px)
+
+    .container-unit
+
+        .container-title
+            left: 2rem
+
+            h1
+                font-size: $title-card + .3rem
+
+            p
+                width: 35rem
+                background: red
+                text-wrap: balance
+                font-size: $description-card
+
+        .container-filter
+            margin-left: 4rem
+
+        .container-cards
+            margin-left: 3.5rem
