feat(student.unit): add responsive for mobile device

--- a/resources/sass/_theme.sass
+++ b/resources/sass/_theme.sass
@@ -81,6 +81,9 @@
                 .blue-card
                     color: $buttons
 
+            .card-b
+                    height: fit-content
+
         .btn-card
             height: 4rem
             width: 20rem
