feat(stundent.exsercise): new styles for the sequence and multiplechoice views

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -31,6 +31,9 @@
 // Temas de estudio/unidades
 @import '_theme'
 
+// Exercise Components
+@import '_exerciseComponents'
+
 // Configuración global del font-size
 html
     font-size: 62.5%
