--- a/resources/sass/_exerciseComponents.sass
+++ b/resources/sass/_exerciseComponents.sass
@@ -1,3 +1,30 @@
+@mixin inputs($width)
+    input, select, textarea
+                        width: $width
+                        outline: none
+                        padding: .5rem
+                        margin: .5rem
+                        font-family: 'Poppins', sans-serif
+                        border-radius: $br-rad
+                        border: 2px solid $cards
+
+@mixin buttonElement
+            button
+                color: #fff
+                cursor: pointer
+                width: fit-content
+                background: $buttons
+                transition: $standar
+                border-radius: $br-rad
+                border: 2px solid $buttons
+                font-size: $description-card
+
+                &:hover
+                    color: #000
+                    background: #fff
+                    transition: $standar
+
+
 //? Sequence View
 .container-main
     margin: 0
@@ -33,10 +60,14 @@
 //? 1) Opción Multiple
 .response-container
     width: 100%
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
 
     .choice-options
         gap: 2rem
         display: flex
+        width: 100%
         flex-wrap: wrap
         justify-content: space-evenly
 
@@ -74,17 +105,12 @@
     .feedback-container
         padding: 2rem
 
-        button
-            color: #fff
-            cursor: pointer
-            width: fit-content
-            background: $buttons
-            transition: $standar
-            border-radius: $br-rad
-            border: 2px solid $buttons
-            font-size: $description-card
+        @include buttonElement
 
-            &:hover
-                color: #000
-                background: #fff
-                transition: $standar
+
+
+//? 2) Completar espacios
+.elements-container
+        @include inputs($width: 20rem)
+        @include buttonElement
+
