--- a/resources/sass/_exerciseComponents.sass
+++ b/resources/sass/_exerciseComponents.sass
@@ -8,11 +8,12 @@
                         border-radius: $br-rad
                         border: 2px solid $cards
 
-@mixin buttonElement
+@mixin buttonElement($width)
             button
+                gap: 2rem
                 color: #fff
+                width: $width
                 cursor: pointer
-                width: fit-content
                 background: $buttons
                 transition: $standar
                 border-radius: $br-rad
@@ -54,10 +55,75 @@
                 .text
                     font-weight: 600
 
+    .summary-container
+        width: 98%
+        display: flex
+        flex-wrap: wrap
+        min-width: 0
+        overflow-x: auto
+        overflow-y: auto
+        height: fit-content
+        justify-content: center
+        border: 1px solid red
+
+
+        .title
+            width: 100%
+            text-align: center
+            font-size: $subtitle-card
+
+        .container-table
+                width: 100%
+                display: flex
+                min-width: 0
+                align-items: center
+                justify-content: center
+                scrollbar-width: thin
+                scrollbar-color: $cards #fff
+                -webkit-overflow-scrolling: touch
+                scroll-behavior: smooth
+                touch-action: pan-x
+
+                &::-webkit-scrollbar
+                    height: 1rem
+                    border-radius: 1rem
+
+                &::-webkit-scrollbar-thumb
+                    border-radius: 0.5rem
+                    scrollbar-color: $cards #fff
+
+                table
+                    width: max-content
+                    min-width: max-content
+                    border-spacing: 0
+                    box-shadow: .1rem .2rem 1rem #ffffff
+                    border: .19rem solid $cards
+
+                    thead th
+                        white-space: nowrap
+                        font-size: $description-card
+                        border: .19rem solid $cards
 
 
 
-//? 1) Opción Multiple
+                    tbody
+                        font-size: $subtitle-card - .2rem
+
+
+                        tr td
+                            white-space: nowrap
+                            border: .19rem solid $cards
+
+                            .green
+                                color: green
+
+                            .red
+                                color: red
+
+        @include buttonElement($width: fit-content)
+
+
+//? 1) Opción Multiple, 3) TrueFalse
 .response-container
     width: 100%
     display: flex
@@ -105,12 +171,137 @@
     .feedback-container
         padding: 2rem
 
-        @include buttonElement
+        @include buttonElement($width: fit-content)
 
 
 
 //? 2) Completar espacios
 .elements-container
         @include inputs($width: 20rem)
-        @include buttonElement
+        @include buttonElement($width: fit-content)
 
+
+//? 4) MatchColumns
+
+.match-columns-container
+        width: 100%
+        display: flex
+        flex-wrap: wrap
+
+        .items-container
+            width: 100%
+            display: flex
+            justify-content: space-around
+
+            .items
+                gap: 2rem
+                display: flex
+                flex-wrap: wrap
+                width: fit-content
+
+
+                .title
+                    width: 100%
+                    font-size: $description-card
+
+                .container-buttons
+                    gap: 2rem
+                    display: flex
+                    flex-direction: column
+                    @include buttonElement($width: fit-content)
+
+                    .selected
+                        color: #000
+                        background: transparent
+
+                    .green
+                        background: green
+
+        .selected-pairs
+            width: 100%
+            display: flex
+            margin-top: 3rem
+            box-shadow: $shadow
+            border-radius: $br-rad
+            justify-content: center
+            font-size: $description-card
+
+
+            .text-xs
+
+                & .green
+                    color: green
+
+                & .red
+                    color: red
+
+        .container-button
+            width: 100%
+            display: flex
+            margin-top: 2rem
+            justify-content: space-evenly
+
+            @include buttonElement($width: fit-content)
+
+//? 5) OrderElements
+
+.order-elements
+    width: 100%
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
+
+    .elements-list
+        gap: 3rem
+        width: 100%
+        display: flex
+        align-items: center
+        flex-direction: column
+        justify-content: center
+
+        .items
+            gap: 3rem
+
+            @include buttonElement($width: fit-content)
+
+            span
+                    margin-right: 2rem
+                    font-size: $description-card
+
+            .button
+                margin-right: 2rem
+
+    .button-response
+            width: 100%
+            display: flex
+            margin-top: 2rem
+            justify-content: space-evenly
+
+            @include buttonElement($width: fit-content)
+
+
+.complete-exercise
+    width: 100%
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+
+    .complete-exercise-item
+        width: 100%
+        display: flex
+        align-items: center
+        justify-content: center
+
+        span
+            font-size: $description-card
+
+        @include buttonElement($width: fit-content)
+        @include inputs($width: 20rem)
+
+.button-container
+        width: 100%
+        display: flex
+        margin-top: 2rem
+        justify-content: space-evenly
+
+        @include buttonElement($width: fit-content)
