fix: correcction bug in the styles

--- a/resources/sass/_forms.sass
+++ b/resources/sass/_forms.sass
@@ -21,6 +21,7 @@
                     height: 4rem
                     width: 34rem
                     outline: none
+                    color: #000
                     cursor: pointer
                     transition: $standar
                     border-radius: $br-rad
@@ -167,6 +168,7 @@
             .bnt-excersice
                 margin: 1rem
                 outline: none
+                color: #000
                 cursor: pointer
                 width: fit-content
                 transition: $standar
