--- a/resources/sass/responsive/_sidebarMobile.sass
+++ b/resources/sass/responsive/_sidebarMobile.sass
@@ -79,7 +79,7 @@
 
 
                 main
-                    translate: 0 1.5rem
+                    translate: 6rem 1.5rem
                     z-index: -10
                     display: flex
                     min-width: 0
@@ -91,7 +91,7 @@
                         border-radius: 0 .8rem .8rem 0
 
                     .items-mobile
-                        
+
                         .nav-links-mobile
                             display: flex
                             cursor: pointer
