--- a/resources/sass/responsive/_sidebarMobile.sass
+++ b/resources/sass/responsive/_sidebarMobile.sass
@@ -1,7 +1,6 @@
 @media screen and ( max-width: 599px ) and (min-width: 320px)
             .container-page
-                display: flex
-                flex-direction: column
+                display: inline
 
                 .sidebar
                     display: none
@@ -10,6 +9,7 @@
                     display: block
                     position: absolute
                     pointer-events: auto
+                        z-index: 1000000
 
                     .menu-mobile
 
@@ -80,11 +80,13 @@
 
                 main
                     translate: 6rem 1.5rem
-                    z-index: -10
+                    z-index: -1000
                     display: flex
                     min-width: 0
 
                 &.container-page.sidebar-collapsed
+
+                    display: flex
 
                     .container-menu-mobile
                         background: $cards
