fix(exercisecomponents.sass): correction style in the width of the table

--- a/resources/sass/_exerciseComponents.sass
+++ b/resources/sass/_exerciseComponents.sass
@@ -56,7 +56,7 @@
                     font-weight: 600
 
     .summary-container
-        width: 98%
+        width: 100%
         display: flex
         flex-wrap: wrap
         min-width: 0
@@ -92,14 +92,14 @@
                     scrollbar-color: $cards #fff
 
                 table
-                    width: max-content
-                    min-width: max-content
                     border-spacing: 0
+                    width: 70rem
+                    min-width: max-content
                     box-shadow: .1rem .2rem 1rem #ffffff
                     border: .19rem solid $cards
 
                     thead th
-                        white-space: nowrap
+                        white-space: wrap
                         font-size: $description-card
                         border: .19rem solid $cards
 
@@ -110,7 +110,7 @@
 
 
                         tr td
-                            white-space: nowrap
+                            white-space: wrap
                             border: .19rem solid $cards
 
                             .green
