fix(themes.sass): correction style in the heigth card

--- a/resources/sass/_theme.sass
+++ b/resources/sass/_theme.sass
@@ -1,6 +1,7 @@
 .container-unit
     width: 100%
     display: flex
+    height: fit-content
     flex-wrap: wrap
 
     .container-title
@@ -80,6 +81,9 @@
 
                 .blue-card
                     color: $buttons
+
+            .card-b
+                height: fit-content
 
             .btn-card
                 height: 4rem
