fix(registermobile): new styles in input-icon-container

--- a/resources/sass/responsive/_registerMobile.sass
+++ b/resources/sass/responsive/_registerMobile.sass
@@ -1,4 +1,4 @@
-@media screen and (min-width: 360px) and (max-width: 599px)
+@media screen and (min-width: 320px) and (max-width: 599px)
     .form-register
         max-width: 35rem
         width: 100%
@@ -12,7 +12,7 @@
             font-size: $subtitle-card
 
         & .elements-container
-            width: 33rem
+            width: 38rem
             height: auto
             margin-top: -2rem
 
@@ -27,11 +27,16 @@
                 font-size: $subtitle-card
 
             .input-icon-container
-                width: 30rem
+                width: 33rem
+                margin-left: .5rem
 
 
                 .inputs
-                    width: 25rem
+                    width: 16rem
+                    font-size: $description-card
+
+                select
+                    font-size: $description-card - .4rem
 
                 .gif-icons
                     width: 3.5rem
