fix(profile and sidebarmobile): correction styles in sidebarmobile and profile

--- a/resources/sass/responsive/_sidebarMobile.sass
+++ b/resources/sass/responsive/_sidebarMobile.sass
@@ -123,7 +123,9 @@
 
                                 button
                                     outline: none
-                                    translate: 3rem
+                                    translate: 0 -1rem
+                                    width: fit-content
+                                    font-size: $description-card - .4rem
                                     border-radius: $br-rad
                                     border: 2px solid #ffff
                                     background: transparent
@@ -133,7 +135,7 @@
                                 width: 10rem
                                 display: flex
                                 flex-wrap: wrap
-                                translate: 2.3rem -10rem
+                                translate: 2.3rem -11rem
                                 justify-content: center
 
                                 .img-logout
