--- a/resources/sass/_profile.sass
+++ b/resources/sass/_profile.sass
@@ -46,11 +46,12 @@
                     button
                         height: 4rem
                         width: 20rem
+                        color: #000
                         outline: none
-                        pointer-events: auto
                         cursor: pointer
                         position: relative
                         transition: $standar
+                        pointer-events: auto
                         border-radius: $br-rad
                         background: transparent
                         border: 2px solid $cards
