--- a/resources/sass/_exerciseComponents.sass
+++ b/resources/sass/_exerciseComponents.sass
@@ -134,8 +134,8 @@
 
     .choice-options
         gap: 2rem
-        display: flex
         width: 100%
+        display: flex
         flex-wrap: wrap
         justify-content: space-evenly
 
@@ -144,8 +144,8 @@
             width: 20rem
             outline: none
             cursor: pointer
-            min-width: min-content
             transition: $standar
+            min-width: min-content
             border-radius: $br-rad
             background: transparent
             border: 2px solid $cards
@@ -307,3 +307,12 @@
         justify-content: space-evenly
 
         @include buttonElement($width: fit-content)
+
+
+@media screen and ( max-width: 599px ) and (min-width: 320px)
+.container-main
+
+    .content-box
+        width: 35rem
+        translate: -3rem 5rem
+
