fix(exercisescomponent.sass): correction in container exercises

--- a/resources/sass/_exerciseComponents.sass
+++ b/resources/sass/_exerciseComponents.sass
@@ -30,14 +30,14 @@
 .container-main
     margin: 0
     padding: 0
-    width: fit-content
+    width: 100%
     display: flex
 
     .content-box
         width: 100%
         display: flex
         flex-wrap: wrap
-        translate: 0 -15rem
+        margin-top: -8rem
         justify-content: center
 
         .title-content-box
@@ -220,7 +220,7 @@
                         background: green
 
         .selected-pairs
-            width: fit-content
+            width: 98%
             display: flex
             margin-top: 3rem
             box-shadow: $shadow
@@ -314,6 +314,7 @@
 
         .content-box
             width: 35rem
-            translate: 3rem 5rem
+            translate: -3rem 9rem
+            
 
 
