feat(sidebar): changes

--- a/resources/sass/_sidebar.sass
+++ b/resources/sass/_sidebar.sass
@@ -34,11 +34,13 @@
 
 
                     a
+                        height: 10rem
                         transform: translateX(9%)
+                        translate: 0 -1rem
 
                         img
-                            width: 16rem
-                            height: 16rem
+                            width: 14rem
+                            height: 14rem
                             position: relative
                             margin-right: 5rem
 
@@ -303,6 +305,8 @@
                         height: 15rem
 
                         a
+                            z-index: -999
+                            pointer-events: none
 
                             img
                                 width: 13rem
